*****************************************************************************************************
digiKam 2.3.0 - Release date: 2011-11-06

NEW FEATURES:


BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 262077 : Crash while trying to select a range of dates in timeline view.
002 ==> 283304 : digiKam from git crashes after splash screen.
003 ==> 282880 : Cannot save new version without from window close.
004 ==> 
