@@ -9,5 +9,6 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 001 ==> 262077 : Crash while trying to select a range of dates in timeline view.
 002 ==> 283304 : digiKam from git crashes after splash screen.
 003 ==> 282880 : Cannot save new version without from window close.
-004 ==> 
+004 ==> 282885 : When synchronizing meta-data with Nepomuk, the tag "Scanned for Faces" show up in Dolphin.
+005 ==> 
 
